Remove references to SourceForge

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 GNU Make Standard Library
 -------------------------
 
-1. Visit http://gmsl.sf.net for more details
+1. Visit https://gmsl.jgc.org/ for more details
 
 2. To use the GMSL in your Makefile make sure that you have the files
 
